--- a/mak_feedback/templates/about.html
+++ b/mak_feedback/templates/about.html
@@ -62,7 +62,7 @@
           <li><a class="nav-link scrollto" href="/about">About Us</a></li>
           <li><a class="nav-link scrollto" href="/team">Team</a></li>
           
-          <li><a class="nav-link scrollto" href="/contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="/contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
