project with Complete Authentication

--- a/mak_feedback/templates/index.html
+++ b/mak_feedback/templates/index.html
@@ -164,9 +164,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="{% static 'assets/img/mukbg3.jpg' %}  " class="img-fluid" alt="">
+              <img src="{% static 'assets/img/pub.jpg' %}  " class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="{% static 'assets/img/mukbg3.jpg' %}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="{% static 'assets/img/pub.jpg' %}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
