footer and the contact page

--- a/mak_feedback/templates/header.html
+++ b/mak_feedback/templates/header.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Squadfree Bootstrap Template - Index</title>
+    <title>Mak Feedback</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -64,7 +64,7 @@
     >
       <div class="logo">
         <h1 class="text-light">
-          <a href="index.html"><span>Mak-feedback</span></a>
+          <a href="index.html"><span>Mak-Feedback</span></a>
         </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="{% static 'assets/img/logo.png' %}" alt="" class="img-fluid"></a>-->
