--- a/mak_feedback/templates/index.html
+++ b/mak_feedback/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Squadfree Bootstrap Template - Index</title>
+    <title>Mak Feedback</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -63,7 +63,7 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero">
       <div class="hero-container" data-aos="fade-up">
-        <h1>Welcome to Mak-feedback</h1>
+        <h1>Welcome to Mak-Feedback</h1>
         <h2>
           We are team of practitioners dedicated for analysing <br />
           the general welfare of the students fraternity <br />
@@ -306,123 +306,82 @@
     </main>
     <!-- End #main -->
 
-    <!-- ======= Footer ======= -->
-    <footer id="footer">
-      <div class="footer-top">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 col-md-6">
-              <div class="footer-info">
-                <h3>Squadfree</h3>
-                <p class="pb-3">
-                  <em
-                    >Qui repudiandae et eum dolores alias sed ea. Qui suscipit
-                    veniam excepturi quod.</em
-                  >
-                </p>
-                <p>
-                  A108 Adam Street <br />
-                  NY 535022, USA<br /><br />
-                  <strong>Phone:</strong> +1 5589 55488 55<br />
-                  <strong>Email:</strong> info@example.com<br />
-                </p>
-                <div class="social-links mt-3">
-                  <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                  <a href="#" class="facebook"
-                    ><i class="bx bxl-facebook"></i
-                  ></a>
-                  <a href="#" class="instagram"
-                    ><i class="bx bxl-instagram"></i
-                  ></a>
-                  <a href="#" class="google-plus"
-                    ><i class="bx bxl-skype"></i
-                  ></a>
-                  <a href="#" class="linkedin"
-                    ><i class="bx bxl-linkedin"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
+  <!-- ======= Footer ======= -->
+<footer id="footer">
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
 
-            <div class="col-lg-2 col-md-6 footer-links">
-              <h4>Useful Links</h4>
-              <ul>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Terms of service</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Privacy policy</a>
-                </li>
-              </ul>
-            </div>
-
-            <div class="col-lg-2 col-md-6 footer-links">
-              <h4>Our Services</h4>
-              <ul>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Web Design</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Web Development</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Product Management</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Marketing</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Graphic Design</a>
-                </li>
-              </ul>
-            </div>
-
-            <div class="col-lg-4 col-md-6 footer-newsletter">
-              <h4>Our Newsletter</h4>
-              <p>
-                Tamen quem nulla quae legam multos aute sint culpa legam noster
-                magna
-              </p>
-              <form action="" method="post">
-                <input type="email" name="email" /><input
-                  type="submit"
-                  value="Subscribe"
-                />
-              </form>
+        <div class="col-lg-4 col-md-6">
+          <div class="footer-info">
+            <h3>Mak-Feedback</h3>
+            <p class="pb-3"><em>Empower Your Voice, Impact Makerere: Your Feedback Matters!</em></p>
+            <p>
+              Makerere University <br>
+              Kampala, UG<br><br>
+              <strong>Phone:</strong> +256 776 178913<br>
+              <strong>Email:</strong> Makfeedback500@gmail.com<br>
+            </p>
+            <div class="social-links mt-3">
+              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Squadfree</span></strong
-          >. All Rights Reserved
+        <div class="col-lg-2 col-md-6 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href='/'>Home</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href='/courses'>Courses</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href='/instructors'>Instructors</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href='/facilities'>Campus Facilities</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href='/about'>About us</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href='/team'>Team</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href='/contact'>Contact</a></li>
+          </ul>
         </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/squadfree-free-bootstrap-template-creative/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+
+        <div class="col-lg-2 col-md-6 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> Facility Rating and Reviews</li>
+            <li><i class="bx bx-chevron-right"></i> Course Evaluation and Feedback</li>
+            <li><i class="bx bx-chevron-right"></i> Instructor Reviews</li>
+            <li><i class="bx bx-chevron-right"></i> Complaints Management</li>
+            <li><i class="bx bx-chevron-right"></i> Newsletter Subscription</li>
+          </ul>
         </div>
+
+        <div class="col-lg-4 col-md-6 footer-newsletter">
+          <h4>Our Newsletter</h4>
+          <p>Stay Informed, Subscribe Today: Join Our Newsletter Community!</p>
+          <form action="" method="post">
+            <input type="email" name="email"><input type="submit" value="Subscribe">
+          </form>
+
+        </div>
+
       </div>
-    </footer>
-    <!-- End Footer -->
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="copyright">
+      &copy; Copyright <strong><span>Mak-Feedback</span></strong>. All Rights Reserved
+    </div>
+    <div class="credits">
+      <!-- All the links in the footer should remain intact. -->
+      <!-- You can delete the links only if you purchased the pro version. -->
+      <!-- Licensing information: https://bootstrapmade.com/license/ -->
+      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/squadfree-free-bootstrap-template-creative/ -->
+      Designed by <a href="team.html">Mak-Feedback Team</a>
+    </div>
+  </div>
+</footer><!-- End Footer -->
 
     <a
       href="#"
