--- a/mak_feedback/templates/team.html
+++ b/mak_feedback/templates/team.html
@@ -124,7 +124,7 @@
                 <div class="col-sm-20">
                 <div class="pic">
                   <img
-                    src="{% static 'assets/img/team/sendi.jpg' %}"
+                    src="{% static 'assets/img/team/Sendi.jpg' %}"
                     class="img-fluid"
                     alt=""
                   />
@@ -147,11 +147,7 @@
               <div class="member" data-aos="fade-up">
                 <div class="col-sm-20">
                 <div class="pic">
-                  <img
-                    src="{% static 'assets/img/team/Devote.jpg' %}">>>>>>> main
-                    class="img-fluid"
-                    alt=""
-                  />
+                  <img  src="{% static 'assets/img/team/Devote.jpg' %} ">
                 </div>
               </div>
                 <div class="member-info">
