--- a/mak_feedback/templates/contact.html
+++ b/mak_feedback/templates/contact.html
@@ -215,7 +215,7 @@
       <div class="copyright">
       </div>
       <div class="credits">
-      Designed by <a href="https://bootstrapmade.com/">Group </a>
+      Designed by <a href="https://bootstrapmade.com/">Group Django</a>
       </div>
     </div>
   </footer><!-- End Footer -->
