--- a/mak_feedback/templates/contact.html
+++ b/mak_feedback/templates/contact.html
@@ -180,7 +180,7 @@
                 <a href="https://twitter.com/Twitter" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="https://www.facebook.com" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="https://www.instagram.com" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="https://www.linkedin.com/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.linkedin.com" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -188,22 +188,21 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h3>Useful Links</h3>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/index">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/about">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/services">Services</a></li>
+             
             </ul>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h3>Our Services</h3>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/services">Web Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/services">Web Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/services">Product Management</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/services">Marketing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/services">Graphic Design</a></li>
             </ul>
           </div>
         </div>
