--- a/mak_feedback/templates/about.html
+++ b/mak_feedback/templates/about.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About</title>
+  <title>Makerere Student Feedback System</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -98,9 +98,11 @@
         <div class="row no-gutters">
           <div class="content col-xl-5 d-flex align-items-stretch" data-aos="fade-up">
             <div class="content">
-              <h3>Voluptatem dignissimos provident quasi</h3>
+              <h3>System Description</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                The Makerere Student Feedback System is an online platform designed to collect valuable feedback from students
+        about their educational experiences at Makerere University. We believe that your feedback is crucial in improving
+        the quality of education and enhancing the learning environment for all students.
               </p>
               <a href="#" class="about-btn">About us <i class="bx bx-chevron-right"></i></a>
             </div>
@@ -110,23 +112,48 @@
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-receipt"></i>
-                  <h4>Corporis voluptates sit</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                  <h4>Mission and Vision</h4>
+                  <p>
+                    <strong>Mission:</strong> To create an efficient and user-friendly platform for students to share their feedback
+                    and contribute to the continuous improvement of Makerere University.
+                </p>
+                <p>
+                    <strong>Vision:</strong> To foster a collaborative feedback culture that empowers students to have a voice and
+                    drives positive changes across the university community.
+                </p>
+                
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-cube-alt"></i>
-                  <h4>Ullamco laboris nisi</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                  <h4>Key Features</h4>
+                  <ul>
+                    <li>Provide feedback on courses, instructors, and campus facilities.</li>
+                    <li>Anonymous feedback submission to ensure privacy and encourage honest responses.</li>
+                    <li>Regular analysis of feedback to identify areas for improvement and implement necessary changes.</li>
+                </ul>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
-                  <h4>Labore consequatur</h4>
-                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                  <h4>Meet the Team</h4>
+                  <p>
+                    Our team of dedicated developers has worked tirelessly to build the Makerere Student Feedback System.
+                    Meet our team members:
+                </p>
+                <ul>
+                    <li>Masembe Sendi Joseph - Senior Developer</li>
+                    <li>Ochieng Devote Boniface - Tech Lead</li>
+                    <li>Aparo Cecilia - Frontend Developer</li>
+                    <li>Kabenge Isham - Team Lead</li>
+                    <li>Mukisa Vaniah Christian- Project Lead</li>
+                </ul>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
-                  <h4>Beatae veritatis</h4>
-                  <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                  <h4>Privacy and Security</h4>
+                  <p>
+                    We take your privacy and security seriously. All feedback submissions are treated with strict confidentiality,
+                    and access to feedback data is restricted to authorized personnel only.
+                </p>
                 </div>
               </div>
             </div><!-- End .content-->
