Project with added visualisations

--- a/mak_feedback/templates/courses.html
+++ b/mak_feedback/templates/courses.html
@@ -155,7 +155,15 @@
               <br>
               <div class="form-group row">
                 <label for="inputCity">College</label>
-                <input type="text" class="form-control" name ="college" id="inputCity">
+                <select class="form-control" name ="college" id="inputCity">
+                  <option value="COSIS" >COSIS</option>
+                  <option value="CONAS" >CONAS</option>
+                  <option value="COBAMS" >COBAMS</option>
+                  <option value="CEES" >CEES</option>
+                  <option value="CAES" >CAES</option>
+                  <option value="CHUSS" >CHUSS</option>
+                  <option value="CEDAT" >CEDAT</option>
+                </select>
               </div>
               <br>
               <div class="form-group row">
