--- a/mak_feedback/templates/header.html
+++ b/mak_feedback/templates/header.html
@@ -88,7 +88,12 @@
           <li><a class="nav-link scrollto" href="/team">Team</a></li>
           <li><a class="nav-link scrollto" href="/contact">Contact</a></li>
           {% if user.username %}
+          <li><a class="nav-link scrollto" href="/statistics">Statistics</a></li>
+          {% endif %}
+          {% if user.username %}
           <li><a class="nav-link scrollto" href="/logout">logout</a></li>
+           {% else %} 
+          <li><a class="nav-link scrollto" href="/login">login</a></li>
           {% endif %}
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -97,4 +102,19 @@
     </div>
   </header>
   <!-- End Header -->
+
+
+
+   <!-- Vendor JS Files -->
+   <script src="{% static 'assets/vendor/purecounter/purecounter_vanilla.js' %}"></script>
+   <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
+   <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+   <script src="{% static 'assets/vendor/glightbox/js/glightbox.min.js' %}"></script>
+   <script src="{% static 'assets/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
+   <script src="{% static 'assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
+   <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
+
+   <!-- Template Main JS File -->
+   <script src="{% static 'assets/js/main.js' %}"></script>
+ </body>
 </html>
