--- a/mak_feedback/templates/index.html
+++ b/mak_feedback/templates/index.html
@@ -40,40 +40,7 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top header-transparent">
-    <div class="container d-flex align-items-center justify-content-between position-relative">
-
-      <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Mak-feedback</span></a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="{% static 'assets/img/logo.png' %}" alt="" class="img-fluid"></a>-->
-      </div>
-
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto active" href="#">Home</a></li>
-          <li class="dropdown"><a href="#"><span>Forms</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="/courses">Courses</a></li>
-              <li><a href="/instructors">Instructors</a></li>
-              <li><a href="/facilities">Compus facilities</a></li>
-              <li><a href="/responses">Feed back</a></li>
-            </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="/about">About Us</a></li>
-          <li><a class="nav-link scrollto" href="/team">Team</a></li>
-          
-          <li><a class="nav-link scrollto" href="/contact">Contact</a></li>
-          {% if user.username %}
-          <li><a class="nav-link scrollto" href="/logout">logout</a></li>
-          {% endif %}
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
-    </div>
-  </header><!-- End Header -->
+  {% include 'header.html' %}
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
