--- a/mak_feedback/templates/about.html
+++ b/mak_feedback/templates/about.html
@@ -102,7 +102,7 @@
               <p>
                 The Makerere Student Feedback System is an online platform designed to collect valuable feedback from students
         about their educational experiences at Makerere University. We believe that your feedback is crucial in improving
-        the quality of education and enhancing the learning environment for all students.
+        the quality of education and enhancing the learning environment for all of the students.
               </p>
               <a href="#" class="about-btn">About us <i class="bx bx-chevron-right"></i></a>
             </div>
@@ -115,7 +115,7 @@
                   <h4>Mission and Vision</h4>
                   <p>
                     <strong>Mission:</strong> To create an efficient and user-friendly platform for students to share their feedback
-                    and contribute to the continuous improvement of Makerere University.
+                    and contribute to the continuous improvement of the great Makerere University.
                 </p>
                 <p>
                     <strong>Vision:</strong> To foster a collaborative feedback culture that empowers students to have a voice and
@@ -151,7 +151,7 @@
                   <i class="bx bx-shield"></i>
                   <h4>Privacy and Security</h4>
                   <p>
-                    We take your privacy and security seriously. All feedback submissions are treated with strict confidentiality,
+                    We take your privacy and security  very seriously. All feedback submissions are treated with strict confidentiality,
                     and access to feedback data is restricted to authorized personnel only.
                 </p>
                 </div>
