--- a/mak_feedback/templates/about.html
+++ b/mak_feedback/templates/about.html
@@ -67,6 +67,9 @@
           {% if user.username %}
           <li><a class="nav-link scrollto" href="/logout">logout</a></li>
           {% endif %}
+          <li class="feedback-btn">
+            <a class="nav-link scrollto" href="/login">View Feedback</a>
+          </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
