--- a/mak_feedback/templates/team.html
+++ b/mak_feedback/templates/team.html
@@ -59,7 +59,7 @@
 
   <body>
      <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top header-transparent">
+  <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between position-relative">
 
       <div class="logo">
@@ -86,6 +86,9 @@
           {% if user.username %}
           <li><a class="nav-link scrollto" href="/logout">logout</a></li>
           {% endif %}
+          <li class="feedback-btn">
+            <a class="nav-link scrollto" href="/login">View Feedback</a>
+          </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
