--- a/mak_feedback/templates/statistics.html
+++ b/mak_feedback/templates/statistics.html
@@ -14,13 +14,22 @@
         <div class="container" >
           <div class ="content">
             <h3>Feed back per category</h3>
-            <div  style="width :60%" >
+            <div  style="width :50%" >
               <canvas id="myChart"></canvas>
             </div>
 
+
+            <br><br>
+            <h3>Feed back rate from each level</h3>
+            <div  style="width :50%" >
+              <canvas id="Chart3"></canvas>
+            </div>
+
+
+
             <br><br>
             <h3>Feed back rate from each college</h3>
-            <div  style="width :60%" >
+            <div  style="width :50%" >
               <canvas id="Chart1"></canvas>
             </div>
 
@@ -29,8 +38,36 @@
             <div  style="width :90%" >
               <canvas id="Chart2"></canvas>
             </div>
+
+
+            <br><br><br><br>
+            <h3>Sentiment Analysis per category</h3><br><br>
+            <h3>Courses response sentiment analysis</h3>
+            <div  style="width :70%" >
+              <canvas id="Chart4"></canvas>
+            </div>
+
+
+            <br><br>
+            <h3>Instructors response sentiment analysis</h3>
+            <div  style="width :70%" >
+              <canvas id="Chart5"></canvas>
+            </div>
+
+            <br><br>
+            <h3>Facilities response sentiment analysis</h3>
+            <div  style="width :70%" >
+              <canvas id="Chart6"></canvas>
+            </div>
+
+
+
+
+
+
           </div>
         </div><br><br><br><br>
+        
       </center>
     </div>
 
@@ -67,17 +104,17 @@
 
 
 
-  const ctx1 = document.getElementById('Chart1');
+  const ctx3 = document.getElementById('Chart3');
 
-  new Chart(ctx1, {
-    type: 'pie',
+  new Chart(ctx3, {
+    type: 'doughnut',
     data: {
-      labels: ['COSIS', 'CEDAT', 'CHUSS','CAES','COBAMS','CEES','CONAS'],
+      labels: ['Post graduate', 'Under graduate'],
       datasets: [{
-        label: 'feed back from college',
-        data: [{{cosis_sum}},{{cedat_sum}},{{chuss_sum}},{{caes_sum}},{{cobams_sum}},{{cees_sum}},{{conas_sum}}],
+        label: 'feed from leve',
+        data: [{{post_sum}},{{und_sum}}],
         borderWidth: 1,
-        backgroundColor :['purple','red','blue','green','indigo','pink','grey'],
+        backgroundColor :['red','blue'],
       }]
     },
     options: {
@@ -89,6 +126,113 @@
     }
     
   });
+
+
+
+
+  const ctx1 = document.getElementById('Chart1');
+
+  new Chart(ctx1, {
+    type: 'polarArea',
+    data: {
+      labels: ['COSIS', 'CEDAT', 'CHUSS','CAES','COBAMS','CEES','CONAS'],
+      datasets: [{
+        label: 'feed back from college',
+        data: [{{cosis_sum}},{{cedat_sum}},{{chuss_sum}},{{caes_sum}},{{cobams_sum}},{{cees_sum}},{{conas_sum}}],
+        borderWidth: 1,
+        backgroundColor :['purple','red','blue','green','pink','tomato','grey'],
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+    
+  });
+
+
+
+  const ctx4 = document.getElementById('Chart4');
+
+  new Chart(ctx4, {
+    type: 'polarArea',
+    data: {
+      labels: ['Neutral', 'Positive', 'Negative'],
+      datasets: [{
+        label: 'Sentiment responses',
+        data: [{{neu_c}},{{post_c}},{{neg_c}}],
+        borderWidth: 1,
+        backgroundColor :['purple','red','blue'],
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+    
+  });
+
+
+
+
+
+
+  const ctx5 = document.getElementById('Chart5');
+
+  new Chart(ctx5, {
+    type: 'polarArea',
+    data: {
+      labels: ['Neutral', 'Positive', 'Negative'],
+      datasets: [{
+        label: 'Sentiment responses',
+        data: [{{neu_i}},{{post_i}},{{neg_i}}],
+        borderWidth: 1,
+        backgroundColor :['purple','red','blue'],
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+    
+  });
+
+
+
+  const ctx6 = document.getElementById('Chart6');
+
+  new Chart(ctx6, {
+    type: 'polarArea',
+    data: {
+      labels: ['Neutral', 'Positive', 'Negative'],
+      datasets: [{
+        label: 'Sentiment responses',
+        data: [{{neu_f}},{{post_f}},{{neg_f}}],
+        borderWidth: 1,
+        backgroundColor :['purple','red','blue'],
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+    
+  });
+
+
+
 
 
 
