--- a/mak_feedback/templates/team.html
+++ b/mak_feedback/templates/team.html
@@ -2,6 +2,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<style>
+    /* Your CSS styles here... */
+    .team-members {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+    }
+
+    .team-member {
+      text-align: center;
+    }
+
+    .pic {
+      width: 250px; /* Increased width */
+      height: 250px; /* Increased height */
+      overflow: hidden;
+      border-radius: 50%;
+      margin: 0 auto;
+    }
+
+    .pic img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  </style>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
@@ -59,39 +85,7 @@
 
   <body>
      <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center justify-content-between position-relative">
-
-      <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Mak-feedback</span></a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="{% static 'assets/img/logo.png' %}" alt="" class="img-fluid"></a>-->
-      </div>
-
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto active" href="/">Home</a></li>
-          <li class="dropdown"><a href="#"><span>Forms</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="/courses">Courses</a></li>
-              <li><a href="/instructors">Instructors</a></li>
-              <li><a href="/facilities">Compus facilities</a></li>
-              <li><a href="/responses">Feed back</a></li>
-            </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="/about">About Us</a></li>
-          <li><a class="nav-link scrollto" href="/team">Team</a></li>
-          
-          <li><a class="nav-link scrollto" href="/contact">Contact</a></li>
-          {% if user.username %}
-          <li><a class="nav-link scrollto" href="/logout">logout</a></li>
-          {% endif %}
-          <li class="feedback-btn">
-            <a class="nav-link scrollto" href="/login">View Feedback</a>
-          </li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+     {% include 'header.html'%}
 
     </div>
   </header><!-- End Header -->
@@ -122,120 +116,88 @@
           </div>
 
           <div class="row">
-            <div class="col-lg-4 col-md-6">
-              <div class="member" data-aos="fade-up">
-                <div class="col-sm-20">
-                <div class="pic">
-                  <img
-                    src="{% static 'assets/img/team/Sendi.jpg' %}"
-                    class="img-fluid"
-                    alt=""
-                  />
-                </div>
+            <div class="col-lg-4 col-md-6 team-member" data-aos="fade-up">
+              <div class="pic">
+                <img src="{% static 'assets/img/team/Sendi.jpg' %}" class="img-fluid" alt="" />
               </div>
-                <div class="member-info">
-                  <h4>Masembe Sendi Joseph</h4>
-                  <span>Senior Developer </span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
+              <div class="member-info">
+                <h4>Masembe Sendi Joseph</h4>
+                <span>Senior Developer</span>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
-
-            <div class="col-lg-4 col-md-6">
-              <div class="member" data-aos="fade-up">
-                <div class="col-sm-20">
-                <div class="pic">
-                  <img  src="{% static 'assets/img/team/Devote.jpg' %} ">
-                </div>
-              </div>
-                <div class="member-info">
-                  <h4>Ochieng Devote Boniface</h4>
-                  <span>Tech Lead</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6">
-              <div class="member" data-aos="fade-up">
-                <div class="col-sm-20">
-                <div class="pic">
-                  <img
-                    src="{% static 'assets/img/team/Aparo.jpg' %}"
-                    class="img-fluid"
-                    alt=""
-                  />
-                </div>
-              </div>
-                <div class="member-info">
-                  <h4>Aparo Cecilia</h4>
-                  <span>Front-end Developer</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
+            
+          <div class="col-lg-4 col-md-6 team-member" data-aos="fade-up">
+            <div class="pic">
+              <img src="{% static 'assets/img/team/Devote.jpg' %}" class="img-fluid" alt="" />
+            </div>
+            <div class="member-info">
+              <h4>Ochieng Devote Boniface</h4>
+              <span>Tech Lead</span>
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
+          </div>
 
-            <div class="col-lg-4 col-md-6">
-              <div class="member" data-aos="fade-up" data-aos-delay="150">
-                <div class="col-sm-20">
-                <div class="pic">
-                  <img
-                    src="{% static 'assets/img/team/Isham.jpg' %}"
-                    class="img-fluid"
-                    alt=""
-                  />
-                </div>
-              </div>
-                <div class="member-info">
-                  <h4>Kabenge Isham</h4>
-                  <span>Team Lead</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
+          <div class="col-lg-4 col-md-6 team-member" data-aos="fade-up">
+            <div class="pic">
+              <img src="{% static 'assets/img/team/Aparo.jpg' %}" class="img-fluid" alt="" />
+            </div>
+            <div class="member-info">
+              <h4>Aparo Cecilia</h4>
+              <span>Front-end Developer</span>
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
+          </div>
 
-            <div class="col-lg-4 col-md-6">
-              <div class="member" data-aos="fade-up" data-aos-delay="300">
-                <div class="col-sm-20">
-                <div class="pic">
-                  <img
-                    src="{% static 'assets/img/team/vaniah.jpg' %}"
-                    class="img-fluid"
-                    alt=""
-                  />
-                </div>
+          <div class="col-lg-4 col-md-6 team-member" data-aos="fade-up" data-aos-delay="150">
+            <div class="pic">
+              <img src="{% static 'assets/img/team/Isham.jpg' %}" class="img-fluid" alt="" />
+            </div>
+            <div class="member-info">
+              <h4>Kabenge Isham</h4>
+              <span>Team Lead</span>
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
-                <div class="member-info">
-                  <h4>Mukisa Vanniah Christian</h4>
-                  <span>Project Lead</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 team-member" data-aos="fade-up" data-aos-delay="300">
+            <div class="pic">
+              <img src="{% static 'assets/img/team/vaniah.jpg' %}" class="img-fluid" alt="" />
+            </div>
+            <div class="member-info">
+              <h4>Mukisa Vanniah Christian</h4>
+              <span>Project Lead</span>
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
+            </div>
+          </div>
             </div>
           </div>
         </div>
